[project]
name = "vitro-contract-currency"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "pyodbc>=4.0.0",
    "psycopg2-binary>=2.9.0",
    "pandas>=2.0.0",
    "sqlalchemy>=2.0.0",
    "openpyxl>=3.1.0",
    "requests>=2.33.0",
]
